--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost/fpbm?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/db_fpbm?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.username=root
 spring.datasource.password=4510Kakachi.
@@ -25,4 +25,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-server.port = 8036
+server.port = 8080
