PVtoPDF added with Qr code generator & and calendar fixed to concatenate Salles if there is one exam in different Salles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 server.port = 8080
 
+#------------PDF Genration properties---------------------
+pdfDir=C:/Users/d/Documents/sping/fpbm-springboot--master/src/main/java/ma/fpbm/fpbmback/ToPdf
+reportFileName=Employee-Report
+reportFileNameDateFormat=dd_MMMM_yyyy
+localDateFormat="dd MMMM yyyy HH:mm:ss"
+logoImgPath1=src/main/java/ma/fpbm/fpbmback/ToPdf/assets/fpbm.png
+logoImgPath2=src/main/java/ma/fpbm/fpbmback/ToPdf/assets/usms.png
+logoImgScale=50,50
+currencySymbol=$
+table_noOfColumns=4
+table.columnNames=Emp Id,Emp Name,Emp Dept,Emp Sal
+
