--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=jdbc:mysql://localhost/db_fpbm?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.username=root
-spring.datasource.password=Password
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Keep the connection alive if idle for a long time (needed in production)
